<resources>
    <string name="app_name">ButtonsAndClickables</string>
    <string name="click_me">Click me for my name</string>
    <string name="warning">Warning</string>
    <string name="favourite">Favourite</string>
    <string name="mail">Mail</string>
    <string name="input_1">Input 1</string>
    <string name="input_2">Input 2</string>
    <string name="input_3">Input 3</string>
    <string name="checkbox1">Checkbox1</string>
    <string name="create">Create</string>
    <string name="radio1">Radio1</string>
    <string name="radio2">Radio2</string>
    <string name="radio3">Radio3</string>
    <string name="switch_button">Switch</string>
    <string name="btn1">btn1</string>
    <string name="btn2">btn2</string>
    <string name="btn3">btn3</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_mail">Enter mail</string>
    <string name="second_activity">Second Activity</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="popup">PopUp</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>
    <string name="comedy">Comedy</string>
    <string name="submit">Submit</string>
</resources>